# PriOmics-Py

./: LICENSE  MGM_functions.py  README.md  pyproject.toml
src/PriOmics/: priomics.py
